--- a/Dirto_/all-locations.html
+++ b/Dirto_/all-locations.html
@@ -42,7 +42,7 @@
                 <div class="col-md-12">
                     <div class="menu-full-width">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="images/Jobinja-Logo.png" style="width: 100px;" alt="logo"></a>
                         </div><!-- end logo -->
                         <div class="main-menu-content">
                             <nav>
@@ -244,104 +244,104 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                    <div class="loc-img">
-                       <img src="images/flag1.jpg" alt="flag">
+                       <img src="images/location_53876-25530.jpg" alt="flag">
                    </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">ایالات متحده (2)</a>
+                    <a href="#" class="loc-name">تهران</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag2.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">لندن (4)</a>
+                    <a href="#" class="loc-name">گیلان</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag3.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">استرالیا (7)</a>
+                    <a href="#" class="loc-name">شیراز</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag4.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">ژاپن (9)</a>
+                    <a href="#" class="loc-name">اصفهان</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag5.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">فرانسه (12)</a>
+                    <a href="#" class="loc-name">یزد</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag6.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">روسیه (14)</a>
+                    <a href="#" class="loc-name">قم</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag7.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">نیوزلند (17)</a>
+                    <a href="#" class="loc-name">بندر عباس</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag8.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">هندوستان (19)</a>
+                    <a href="#" class="loc-name">مازندران</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag9.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">هلند (15)</a>
+                    <a href="#" class="loc-name">زنجان</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag10.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">ایران (17)</a>
+                    <a href="#" class="loc-name">تبریز</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag11.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">عربستان سعودی (29)</a>
+                    <a href="#" class="loc-name">سمنان</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag12.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
-                    <a href="#" class="loc-name">اسکاتلند (10)</a>
+                    <a href="#" class="loc-name">اراک</a>
                 </div><!-- end loc-item -->
             </div><!-- end col-md-3 -->
 
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag13.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">کانادا (43)</a>
                 </div><!-- end loc-item -->
@@ -349,7 +349,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag14.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">مکزیک (45)</a>
                 </div><!-- end loc-item -->
@@ -357,7 +357,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag15.gif" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">بنگلادش (50)</a>
                 </div><!-- end loc-item -->
@@ -365,7 +365,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag16.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">آفریقای جنوبی (60)</a>
                 </div><!-- end loc-item -->
@@ -373,7 +373,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag17.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">پاکستان (48)</a>
                 </div><!-- end loc-item -->
@@ -381,7 +381,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag18.jpg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">کاستاریکا (33)</a>
                 </div><!-- end loc-item -->
@@ -389,7 +389,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag19.svg" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">ایتالیا (44)</a>
                 </div><!-- end loc-item -->
@@ -397,7 +397,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="loc-item">
                     <div class="loc-img">
-                        <img src="images/flag20.png" alt="flag">
+                        <img src="images/location_53876-25530.jpg" alt="flag">
                     </div><!-- end loc-img -->
                     <a href="#" class="loc-name">تایلند (55)</a>
                 </div><!-- end loc-item -->
