--- a/Dirto_/index.html
+++ b/Dirto_/index.html
@@ -42,7 +42,7 @@
                 <div class="col-md-12">
                     <div class="menu-full-width">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="images/Jobinja-Logo.png" style="width: 100px;" alt="logo"></a>
                         </div><!-- end logo -->
                         <div class="main-menu-content">
                             <nav>
@@ -540,18 +540,6 @@
                 </div><!-- end hiw-item -->
             </div><!-- end col-md-4 -->
         </div><!-- end row -->
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="hiw-video-btn">
-                    <img src="images/video-img.jpg" alt="video-img">
-                    <div class="video-text">
-                        <a class="mfp-iframe video-play-btn" href="https://www.youtube.com/watch?v=DQMeTCtsLcU" title="پخش فیلم">
-                            <span class="la la-play"></span>
-                        </a>
-                        <p class="video__desc">تماشا کنید که چگونه کار می کند</p>
-                    </div><!-- end video-text -->
-                </div><!-- end hiw-video-btn -->
-            </div><!-- end col-md-8 -->
         </div><!-- end row -->
     </div><!-- end container -->
 </section><!-- end hiw-area -->
