--- a/Dirto_/sign-up.html
+++ b/Dirto_/sign-up.html
@@ -42,7 +42,7 @@
                 <div class="col-md-12">
                     <div class="menu-full-width">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="images/Jobinja-Logo.png" style="width: 100px;" alt="logo"></a>
                         </div><!-- end logo -->
                         <div class="main-menu-content">
                             <nav>
@@ -243,8 +243,8 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="contact-form-action">
                     <div class="form-heading text-center">
-                        <h3 class="form__title">ایجاد یک حساب کاربری!</h3>
-                        <p class="form__desc">همراه با شبکه های اجتماعی.</p>
+                        <h3 class="form__title">فرم عضویت</h3>
+                        <p class="form__desc">عضویت با شبکه های اجتماعی</p>
                     </div>
                     <!--Contact Form-->
                     <form method="post">
@@ -288,16 +288,16 @@
                             <div class="col-md-12 col-sm-12 col-xs-12 form-condition">
                                 <label class="agree-label">
                                     <input type="checkbox" name="checkbox" class="checkbox-option">
-                                    من دیرتو موافقم <a href="#">حریم خصوصی</a>
+                                        با قوانین سایت موافقم <a href="#">حریم خصوصی</a>
                                 </label>
-                                <label class="agree-label">
+                                <!-- <label class="agree-label">
                                     <input type="checkbox" name="checkbox" class="checkbox-option">
                                     من دیرتو موافقم <a href="#">شرایط خدمات</a>
-                                </label>
+                                </label> -->
                             </div><!-- end col-md-12 -->
                             <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                                 <button class="theme__btn" type="submit">
-                                    ثبت نام حساب <span class="la la-angle-left"></span>
+                                    ثبت نام  <span class="la la-angle-left"></span>
                                 </button>
                             </div><!-- end col-md-12 -->
                             <div class="col-md-12 col-sm-12 col-xs-12 account-assist">
