--- a/Dirto_/user-profile.html
+++ b/Dirto_/user-profile.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>دیرتو - قالب ثبت آگهی و دایرکتوری</title>
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.html">
+    <link rel="icon" href="images/Jobinja-Logo.png">
 
 
     <!-- Template CSS Files -->
@@ -42,7 +42,7 @@
                 <div class="col-md-12">
                     <div class="menu-full-width">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="images/Jobinja-Logo.png" style="width: 100px;" alt="logo"></a>
                         </div><!-- end logo -->
                         <div class="main-menu-content">
                             <nav>
