third version of website

--- a/Dirto_/add-listing.html
+++ b/Dirto_/add-listing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="FA">
 
 <head>
     <meta charset="UTF-8">
@@ -409,7 +409,7 @@
                                         <input class="form-control" type="text" name="name" placeholder="https://plus.google.com">
                                     </div><!-- end col-md-6 -->
                                     <div class="col-md-6 col-sm-12 form-group">
-                                        <label class="label-text">لینک لینک دین</label>
+                                        <label class="label-text">لینک لینکدین</label>
                                         <input class="form-control" type="text" name="name" placeholder="www.linkedin.com/">
                                     </div><!-- end col-md-6 -->
                                     <div class="col-md-12 col-sm-12 form-group">
@@ -1043,34 +1043,7 @@
 <!-- ================================
     START CTA AREA
 ================================= -->
-<section class="cta-area cta-area2">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="cta-box clearfix">
-                    <div class="col-md-8">
-                        <div class="section-heading">
-                            <h2 class="sec__title sec__title2">مشترک شدن در خبرنامه!</h2>
-                            <p class="sec__meta">
-                               مشترک شدن برای دریافت آخرین به روز رسانی و اطلاعات.
-                            </p>
-                        </div><!-- end section-heading -->
-                    </div><!-- end col-md-8 -->
-                    <div class="col-md-4">
-                        <div class="contact-form-action">
-                            <!--Contact Form-->
-                            <form method="post">
-                                <span class="la la-envelope-o"></span>
-                                <input class="form-control" type="email" placeholder="ایمیل خود را وارد کنید" required="">
-                                <button class="theme__btn" type="submit">مشترک شدن</button>
-                            </form>
-                        </div><!-- end contact-form-action -->
-                    </div><!-- end col-md-3 -->
-                </div><!-- end cta-box -->
-            </div><!-- end col-md-12 -->
-        </div><!-- end row -->
-    </div><!-- end container -->
-</section><!-- end cta-area -->
+
 <!-- ================================
     END CTA AREA
 ================================= -->
