--- a/Dirto_/invoice.html
+++ b/Dirto_/invoice.html
@@ -45,7 +45,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="invoice-logo">
-                                    <img src="images/logo2.png" alt="logo">
+                                    <a href="index.html"><img src="images/Jobinja-Logo.png" style="width: 100px;" alt="logo"></a>
                                 </div>
                             </div><!-- end col-md-6 -->
                             <div class="col-md-6">
