--- a/Dirto_/page-404.html
+++ b/Dirto_/page-404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>صفحه ای یافت نشد - قالب ثبت آگهی و دایرکتوری</title>
+    <title>سامانه ثبت آگهی</title>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.html">
 
@@ -39,7 +39,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="error-content">
                     <img src="images/404-img.jpg" alt="error image">
-                    <h3 class="error-title">وای! هیچ صفحه ای پیدا نشد.</h3>
+                    <h3 class="error-title"> هیچ صفحه ای پیدا نشد.</h3>
                     <p class="error-desc">
                         ممکن است صفحه ای که دنبال آن هستید حذف یا کلا انتقال داده شده است. متاسفیم که این اتفاق افتاد، در صورت مایل بودن با ما در تماس باشید شاید تونستین کمکی کنیم.<a href="#">مرکز پشتیبانی.</a>
                     </p>
