--- a/Dirto_/listing-details.html
+++ b/Dirto_/listing-details.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>دیرتو - قالب ثبت آگهی و دایرکتوری</title>
+    <title>سامانه ثبت آگهی</title>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.html">
 
