--- a/Dirto_/pricing.html
+++ b/Dirto_/pricing.html
@@ -42,7 +42,7 @@
                 <div class="col-md-12">
                     <div class="menu-full-width">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            <a href="index.html"><img src="images/Jobinja-Logo.png" style="width: 100px;" alt="logo"></a>
                         </div><!-- end logo -->
                         <div class="main-menu-content">
                             <nav>
