--- a/Dirto_/index.html
+++ b/Dirto_/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>دیرتو - قالب ثبت آگهی و دایرکتوری</title>
+    <title>سامانه ثبت آگهی</title>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.html">
 
@@ -237,17 +237,17 @@
                     </div><!-- end main-search-input-item -->
                     <div class="main-search-input-item location">
                         <select>
-                            <option data-display="یک مکان را انتخاب کنید">یک مکان را انتخاب کنید</option>
-                            <option value="1">استرالیا</option>
-                            <option value="2">کانادا</option>
-                            <option value="3">آمستردام هلند</option>
-                            <option value="4">ایران</option>
-                            <option value="5">هند</option>
-                            <option value="6">المان</option>
-                            <option value="7">اسپانیا</option>
-                            <option value="8">آمریکا</option>
-                            <option value="9">انگلیس</option>
-                            <option value="10">چین</option>
+                            <option data-display="یک استان را انتخاب کنید">یک استان را انتخاب کنید</option>
+                            <option value="1">تهران</option>
+                            <option value="2">شیراز</option>
+                            <option value="3">همدان</option>
+                            <option value="4">یزد</option>
+                            <option value="5">زنجان</option>
+                            <option value="6">تبریز</option>
+                            <option value="7">گیلان</option>
+                            <option value="8">قم</option>
+                            <option value="9">خراسان رضوی</option>
+            
                         </select>
                     </div><!-- end main-search-input-item -->
                     <div class="main-search-input-item category">
@@ -492,7 +492,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="section-heading">
-                    <h2 class="sec__title">برنامه ریزی برای تعطیلات رویاهای شما</h2>
+                    <h2 class="sec__title">شغل مورد نظر خود را بیابید</h2>
                     <p class="sec__meta">
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                     </p>
@@ -506,7 +506,7 @@
                         <span class="la la-map-o"></span>
                     </div><!-- end hiw-icon-->
                     <div class="hiw-content">
-                       <h4 class="hiw__title">مکان جالب پیدا کنید</h4>
+                       <h4 class="hiw__title">مهارت</h4>
                         <p class="hiw__desc">
                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                         </p>
@@ -519,7 +519,7 @@
                         <span class="la la-envelope-o"></span>
                     </div><!-- end hiw-icon-->
                     <div class="hiw-content">
-                        <h4 class="hiw__title">با چند نویسنده تماس بگیرید</h4>
+                        <h4 class="hiw__title">علاقه مندی   </h4>
                         <p class="hiw__desc">
                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                         </p>
@@ -532,7 +532,7 @@
                         <span class="la la-user"></span>
                     </div><!-- end hiw-icon-->
                     <div class="hiw-content">
-                        <h4 class="hiw__title">رزرو کنید</h4>
+                        <h4 class="hiw__title">لیست مشاغل</h4>
                         <p class="hiw__desc">
                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                         </p>
@@ -555,7 +555,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="section-heading">
-                    <h2 class="sec__title">بیشترین مکانهای بازدید شده</h2>
+                    <h2 class="sec__title">شرکت های دانش بنیان</h2>
                     <p class="sec__meta">
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                     </p>
@@ -894,7 +894,7 @@
                         <span class="count-symbol">+</span>
                     </div><!-- end fun-number -->
                     <div class="fun-content">
-                        <p class="counter__title">پروژه های تکمیلی</p>
+                        <p class="counter__title">تعداد عضو فعال</p>
                     </div><!-- end fun-content -->
                 </div><!-- end fun-item -->
             </div><!-- end col-md-3 -->
@@ -905,7 +905,7 @@
                         <span class="count-symbol">+</span>
                     </div><!-- end fun-number -->
                     <div class="fun-content">
-                        <p class="counter__title">مشتریان خوشحال</p>
+                        <p class="counter__title">شرکت های دانش بنیان</p>
                     </div><!-- end fun-content -->
                 </div><!-- end fun-item -->
             </div><!-- end col-md-3 -->
@@ -916,7 +916,7 @@
                         <span class="count-symbol">+</span>
                     </div><!-- end fun-number -->
                     <div class="fun-content">
-                        <p class="counter__title">جوایز ها</p>
+                        <p class="counter__title">تعداد آگهی ها</p>
                     </div><!-- end fun-content -->
                 </div><!-- end fun-item -->
             </div><!-- end col-md-3 -->
@@ -927,7 +927,7 @@
                         <span class="count-symbol">+</span>
                     </div><!-- end fun-number -->
                     <div class="fun-content">
-                        <p class="counter__title">برنده جوایز</p>
+                        <p class="counter__title">تعداد آگهی های فعال</p>
                     </div><!-- end fun-content -->
                 </div><!-- end fun-item -->
             </div><!-- end col-md-3 -->
@@ -946,7 +946,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="section-heading">
-                    <h2 class="sec__title">چیزی که ما پیشنهاد میدیم</h2>
+                    <h2 class="sec__title">موضوعات ثبت آگهی</h2>
                     <p class="sec__meta">
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                     </p>
@@ -960,7 +960,7 @@
                         <span class="la la-map"></span>
                     </div><!-- end hiw-icon-->
                     <div class="hiw-content">
-                        <h4 class="hiw__title">بزرگترین اماکن</h4>
+                        <h4 class="hiw__title">ترجمه</h4>
                         <p class="hiw__desc">
                             یکی از حرفه ای ترین قالب های دایرکتوری در جهان
                         </p>
@@ -973,7 +973,7 @@
                         <span class="la la-cutlery"></span>
                     </div><!-- end hiw-icon-->
                     <div class="hiw-content">
-                        <h4 class="hiw__title">بزرگترین رستوران ها</h4>
+                        <h4 class="hiw__title"> رستوران ها</h4>
                         <p class="hiw__desc">
                             یکی از حرفه ای ترین قالب های دایرکتوری در جهان
                         </p>
@@ -986,7 +986,7 @@
                         <span class="la la-hotel"></span>
                     </div><!-- end hiw-icon-->
                     <div class="hiw-content">
-                        <h4 class="hiw__title">بزرگترین هتل ها</h4>
+                        <h4 class="hiw__title"> هتل ها</h4>
                         <p class="hiw__desc">
                             یکی از حرفه ای ترین قالب های دایرکتوری در جهان
                         </p>
@@ -1323,7 +1323,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="footer-item">
                     <div class="logo">
-                        <a href="index.html" class="foot-logo"><img src="images/logo2.png" alt="logo"></a>
+                        <a href="index.html" class="foot-logo"><img src="images/Jobinja-Logo.png" alt="logo"></a>
                         <p class="footer__desc">
                            یکی از بهترین قالب های ثبت آگهی و دایرکتوری همراه رزرو صندلی با تعداد اعضاس خانواده
 						   باید به دنبال خوشبختی بروید تا خوشبختی بداند که شما دنبالش هستید.
