--- a/Dirto_/user-profile.html
+++ b/Dirto_/user-profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>دیرتو - قالب ثبت آگهی و دایرکتوری</title>
+    <title>سامانه ثبت آگهی</title>
     <!-- Favicon -->
     <link rel="icon" href="images/Jobinja-Logo.png">
 
