--- a/Dirto_/add-listing.html
+++ b/Dirto_/add-listing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="FA">
+<html lang="fa">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <title>سامانه ثبت آگهی</title>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.html">
+
 
 
     <!-- Template CSS Files -->
